[package]
name = "chicken-rust"
version = "0.1.0"
edition = "2021"
description = "Browser based data toolbox"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
wasm-bindgen = "0.2.84"
web-sys =  { version = "0.3.61", features = ["HtmlSelectElement"] }
gloo-console = "0.2.3"
sha1 = "0.10.5"
sha2 = "0.10.6"
rand = "0.8.5"
getrandom = { version = "0.2.2", features = ["js"] }
hex = "0.4.3"
base64 = "0.21.0"
urlencoding = "1.0.1"
aes = "0.8.2"
cbc = "0.1.2"
log = "0.4.17"
